--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
 <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width" initial scale="1.0">
+    <title>repl.it</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link 
+    rel="stylesheet" 
+    href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" 
+    integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+    crossorigin="anonymous"/>
+  </head>
+  <body>
+    <div id="pic">
+      <div>
+        <img src="http://placekitten.com/500/150" alt="Big Cat Pic">
+    </div>
+    </div>
+    <div id="icons">
+      <span><i class="fa-thin fa-abacus"></i></span>
+      <span><i class="fa-thin fa-album-collection-circle-plus"></i></span>
+      <span><i class="fa-thin fa-code"></i></span>
+      <span><i class="fa-thin fa-chess-king-piece"></i></span>
+      <span><i class="fa-thin fa-chess-king-piece"></i></span>
+    </div>
+    <div id="mini-layout">
+      <!--Pic 1-->
+      <span>
+        <div>
+          <img src="http://place-puppy.com/100x100" alt="Puppy Pic">
+      </div>
+      <div>
+          <strong>Silly Puppy</strong>
+      </div>
+      <div>
+          <p>So curious!</p>
+      </div>
+      <div>
+          <a href="http://place-puppy.com">Puppies Here</a>
+      </div>
+      </span>
+      <!--Pic 2-->
+      <span>
+        <div>
+          <img src="http://placekitten.com/100/100" alt="Kitty Pic">
+      </div>
+      <div>
+          <strong>Cute Kitty</strong>
+      </div>
+      <div>
+          <p>Feline Fun!</p>
+      </div>
+      <div>
+          <a href="http://placekitten.com">Kittens Here</a>
+      </div>
+      </span>
+      <!--Pic 3-->
+      <span>
+        <div>
+          <img src="http://placedog.net/100/100" alt="Dog Pic">
+      </div>
+      <div>
+          <strong>Happy Husky</strong>
+      </div>
+      <div>
+          <p>Sit!</p>
+      </div>
+      <div>
+          <a href="http://placedog.net">Dogs Here</a>
+      </div>
+      </span>
+      <!--Pic 4-->
+      <span>
+        <div>
+          <img src="http://placebear.com/100/100" alt="Bear Pic">
+      </div>
+      <div>
+          <strong>Big Bear</strong>
+      </div>
+      <div>
+          <p>Very Grizzly!</p>
+      </div>
+      <div>
+          <a href="http://placebear.com">Bears Here</a>
+      </div>
+      </span>
+    </div>
+  </body>
+</html>
